# SLEAP-Autoanalysis

./: 'test'.autosleap_config  .codacy.yml  Machine Learning for Pose Estimation using SLEAP.pptx  README.md  environment.yml  guitest.py  meta.yml  pyproject.toml  setup.py  trajpred.slp
autosleap/: __init__.py  autoanalysis.py  cli_parser.py  meta.yaml  metadata.py  track_video.py
autosleap/gui/: app.py  view.py  widgets.py
autosleap/process/: common.py  framerate.py  jobs.py  sleap.py  transcode.py
conda-build/: meta.yaml
sleapy/: __init__.py  main.py  utils.py
sleapy/gui/: view.py  widgets.py
src/autosleap/: __init__.py  cli_parser.py  metadata.py  utils.py  video.py  visualize.py
src/autosleap/gui/: __init__.py  view.py  widgets.py
src/autosleap/process/: __init__.py  common.py  video.py
src/tests/: joblist_test.py  settings.json  simpletest.py
tests/: guitest.py
